--- a/dedicated/pages/styles/About.css
+++ b/dedicated/pages/styles/About.css
@@ -17,7 +17,7 @@
 .u-section-1 .u-image-1 {
   width: 300px;
   height: 300px;
-  background-image: url("images/g21d21d7f5228756ae65a33282c72be3be1bbdb97497fce6054ccbde4308b57b963f725f390c30ad387ba987c63ff16e5324fb256b9581084fb22f1356461c690_1280.jpg");
+  background-image: url("../images/ekey.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
